--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,12 +9,13 @@ pool:
 variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-  dotnetSdkVersion: '3.0.101'
+  dotnetSdkVersion: '3.x'
 
+steps:
 - task: UseDotNet@2
   displayName: 'Use dotnet sdk 3.x'
   inputs:
-    version: 3.x
+    version: '$(dotnetSdkVersion)'
     includePreviewVersions: true
 
 - task: Npm@1
