--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,11 @@ variables:
 
 steps:
 
-- task: DotNetCoreInstaller@0
+- task: UseDotNet@2
   displayName: 'Install .net core 3.0 (preview)'
   inputs:
-    version: '3.0.100-preview9-014004'
+    packageType: sdk
+    version: '3.0.101'
 
 - task: Npm@1
   displayName: 'Run npm install'
